# youtube-knowledge-base-mcp

./: .gitignore  PIPELINE.md  README.md  TODO-processing-ux.md  demo.ipynb  pyproject.toml  youtube_transcript_kb_demo.ipynb
:memory:/test.lance/_indices/54eca57a-8b2e-48d2-adda-cb15eccc68f9/: part_0_docs.lance  part_0_invert.lance  part_0_tokens.lance
:memory:/test.lance/_transactions/: 0-03e60456-8f59-451e-a4f2-30a3be4e6255.txn  1-6e26d562-f9fd-4faf-ba26-0367fafa37ed.txn
:memory:/test.lance/_versions/: 1.manifest  2.manifest
youtube_knowledgebase_mcp/: __init__.py  cli.py  data_management.py  main.py  mcp_tools.py  vector_store.py  youtube_transcript.py
youtube_knowledgebase_mcp/core/: __init__.py  config.py  database.py  embeddings.py  models.py
youtube_knowledgebase_mcp/repositories/: __init__.py  chunks.py  sources.py
youtube_knowledgebase_mcp/services/: __init__.py  chunking.py  organization.py  search.py
youtube_knowledgebase_mcp/services/context/: __init__.py  contextualizer.py  provider.py
youtube_knowledgebase_mcp/services/hyde/: __init__.py  provider.py  transformer.py
youtube_knowledgebase_mcp/services/ingestion/: __init__.py  base.py  youtube.py
