[project]
name = "my-agent-project"
version = "0.1.0"
description = "Agent project with LLMs, LangChain, and data tools"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "openai",
    "langchain",
    "transformers",
    "datasets",
    "huggingface_hub",
    "python-dotenv",
    "wikipedia",
    "langchain-openai",
    "yt-dlp",
    "mcp[cli]",
    "langchain-community",
    "faiss-cpu",
    "scikit-learn",
    "pyarrow",
    "httpx",
    "psycopg2-binary",
    "ipykernel",
    "jupyterlab"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
